# langgraph_from_scratch

./: .gitattributes  .gitignore  PROJECT_HANDOVER.md  pyproject.toml
scripts/: chat_demo.py
src/bank_marketing_graph/: graph.py  state.py
src/bank_marketing_graph/nodes/: confirm.py  dispatch.py  light_smalltalk_gate.py  llm_router_mock.py  normalize.py  rule_router.py
src/bank_marketing_graph/tools/: chart_tool.py  data_sources.py  workflows.py
tests/: test_intent_routing.py  test_report_confirmation.py  test_smalltalk_fastpath.py
