[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-marketing-graph"
version = "0.1.0"
description = "LangGraph based intent router for corporate banking marketing workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
